feat(ui): Update service resource display to include CPU limits and adjust layout

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1246,9 +1246,9 @@
                     <div><span class="label">Sync</span><span id="data-sync">-</span></div>
                 </div>
                 <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
                     <div class="service-resource ram"><span class="value">4 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">CPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource net"><span class="value">CPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-data.html" target="_blank">Info</a>
@@ -1269,9 +1269,9 @@
                     <div><span class="label">Training</span><span id="nhits-training">-</span></div>
                 </div>
                 <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">4 CPU</span><span class="label">CPU Limit</span></div>
                     <div class="service-resource ram"><span class="value">16 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">GPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource net"><span class="value">GPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-nhits.html" target="_blank">Info</a>
@@ -1292,9 +1292,9 @@
                     <div><span class="label">Pattern</span><span id="tcn-patterns">16 Typen</span></div>
                 </div>
                 <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">4 CPU</span><span class="label">CPU Limit</span></div>
                     <div class="service-resource ram"><span class="value">8 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">GPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource net"><span class="value">GPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-tcn.html" target="_blank">Info</a>
@@ -1316,9 +1316,9 @@
                     <div><span class="label">Scorer</span><span id="hmm-scorer">-</span></div>
                 </div>
                 <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
                     <div class="service-resource ram"><span class="value">4 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">CPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource net"><span class="value">CPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-hmm.html" target="_blank">Info</a>
@@ -1339,9 +1339,9 @@
                     <div><span class="label">Modelle</span><span id="embedder-models">4 Types</span></div>
                 </div>
                 <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
                     <div class="service-resource ram"><span class="value">12 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">GPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource net"><span class="value">GPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-embedder.html" target="_blank">Info</a>
@@ -1362,9 +1362,9 @@
                     <div><span class="label">Dokumente</span><span id="rag-docs">-</span></div>
                 </div>
                 <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
                     <div class="service-resource ram"><span class="value">8 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">GPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource net"><span class="value">GPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-rag.html" target="_blank">Info</a>
@@ -1386,9 +1386,9 @@
                     <div><span class="label">RAG</span><span id="llm-rag">-</span></div>
                 </div>
                 <div class="service-resources">
-                    <div class="service-resource ram"><span class="value">32 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">GPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
+                    <div class="service-resource ram"><span class="value">4 GB</span><span class="label">RAM Limit</span></div>
+                    <div class="service-resource net"><span class="value">GPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-llm.html" target="_blank">Info</a>
@@ -1410,9 +1410,9 @@
                     <div><span class="label">Telegram</span><span id="watchdog-telegram">-</span></div>
                 </div>
                 <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">1 CPU</span><span class="label">CPU Limit</span></div>
                     <div class="service-resource ram"><span class="value">512 MB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource cpu"><span class="value">CPU</span><span class="label">Mode</span></div>
-                    <div class="service-resource net"><span class="value">trading-net</span><span class="label">Network</span></div>
+                    <div class="service-resource net"><span class="value">CPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-watchdog.html" target="_blank">Info</a>
