--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -938,7 +938,7 @@
             <h1>KI Trading Model</h1>
             <div class="header-status">
                 <a href="/testing.html" class="header-btn">&#128203; Tests</a>
-                <span id="services-count">Services: -/9</span>
+                <span id="services-count">Services: -/10</span>
                 <span id="endpoints-count">Endpoints: -</span>
                 <span id="last-update">Update: -</span>
             </div>
@@ -998,7 +998,7 @@
 
                     <!-- ML Services Stage -->
                     <div class="dataflow-stage">
-                        <span class="dataflow-stage-label">ML Models</span>
+                        <span class="dataflow-stage-label">ML Inference</span>
                         <div class="dataflow-nodes-vertical">
                             <div class="dataflow-node ml">
                                 <span class="node-status loading" id="df-nhits-status"></span>
@@ -1030,6 +1030,23 @@
                                 <div class="node-info">
                                     <span class="node-name">Embedder</span>
                                     <span class="node-port">:3005</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="dataflow-arrow">&#8595;</div>
+
+                    <!-- Training Stage -->
+                    <div class="dataflow-stage">
+                        <span class="dataflow-stage-label">Training</span>
+                        <div class="dataflow-nodes-vertical">
+                            <div class="dataflow-node training" style="border-color: #f97316; background: rgba(249, 115, 22, 0.1);">
+                                <span class="node-status loading" id="df-tcn-train-status"></span>
+                                <span class="node-icon">&#127891;</span>
+                                <div class="node-info">
+                                    <span class="node-name">TCN-Train</span>
+                                    <span class="node-port">:3013</span>
                                 </div>
                             </div>
                         </div>
@@ -1280,26 +1297,51 @@
                 </div>
             </div>
 
-            <!-- TCN-Pattern Service -->
+            <!-- TCN-Pattern Service (Inference) -->
             <div class="service-card" id="tcn-card">
                 <div class="service-header">
                     <h2>TCN-Pattern</h2>
                     <span class="status-badge status-loading" id="tcn-status">Laden...</span>
                 </div>
-                <p>Temporal Convolutional Network - Erkennung von 16 Chart-Pattern Typen mit Deep Learning.</p>
+                <p>Temporal Convolutional Network - Erkennung von 16 Chart-Pattern Typen (Inference Only).</p>
                 <div class="service-info" id="tcn-info">
                     <div><span class="label">Port</span><span>3003</span></div>
                     <div><span class="label">Pattern</span><span id="tcn-patterns">16 Typen</span></div>
+                    <div><span class="label">Model</span><span id="tcn-model-status">-</span></div>
                 </div>
                 <div class="service-resources">
-                    <div class="service-resource cpu"><span class="value">4 CPU</span><span class="label">CPU Limit</span></div>
-                    <div class="service-resource ram"><span class="value">8 GB</span><span class="label">RAM Limit</span></div>
+                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
+                    <div class="service-resource ram"><span class="value">4 GB</span><span class="label">RAM Limit</span></div>
                     <div class="service-resource net"><span class="value">GPU</span><span class="label">Mode</span></div>
                 </div>
                 <div class="service-links">
                     <a href="/service-tcn.html" target="_blank">Info</a>
                     <a href="/tcn/docs" target="_blank">API Docs</a>
                     <a href="/config-tcn.html" target="_blank">Config</a>
+                </div>
+            </div>
+
+            <!-- TCN-Training Service -->
+            <div class="service-card" id="tcn-train-card" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.15), rgba(249, 115, 22, 0.05)); border-color: rgba(249, 115, 22, 0.3);">
+                <div class="service-header">
+                    <h2>TCN-Training</h2>
+                    <span class="status-badge status-loading" id="tcn-train-status">Laden...</span>
+                </div>
+                <p>Dedizierter Training-Container - Modell-Training ohne API-Blockierung. Low Priority.</p>
+                <div class="service-info" id="tcn-train-info">
+                    <div><span class="label">Port</span><span>3013</span></div>
+                    <div><span class="label">Training</span><span id="tcn-train-active">-</span></div>
+                    <div><span class="label">Epoch</span><span id="tcn-train-epoch">-</span></div>
+                </div>
+                <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">4 CPU</span><span class="label">CPU Limit</span></div>
+                    <div class="service-resource ram"><span class="value">8 GB</span><span class="label">RAM Limit</span></div>
+                    <div class="service-resource net"><span class="value">LOW</span><span class="label">Priority</span></div>
+                </div>
+                <div class="service-links">
+                    <a href="/tcn-train/docs" target="_blank" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.3), rgba(249, 115, 22, 0.15)); color: #fb923c;">API Docs</a>
+                    <a href="/tcn-train/api/v1/train/status" target="_blank">Status</a>
+                    <a href="/tcn-train/api/v1/models" target="_blank">Models</a>
                 </div>
             </div>
 
@@ -1482,6 +1524,7 @@
             'data': 'df-data-status',
             'nhits': 'df-nhits-status',
             'tcn': 'df-tcn-status',
+            'tcn-train': 'df-tcn-train-status',
             'hmm': 'df-hmm-status',
             'embedder': 'df-embedder-status',
             'rag': 'df-rag-status',
@@ -1558,7 +1601,42 @@
         }
 
         async function updateTcnInfo() {
-            await checkHealth('tcn', 3003, 'tcn-status');
+            const data = await checkHealth('tcn', 3003, 'tcn-status');
+            if (data) {
+                // Try to get model info
+                try {
+                    const modelRes = await fetch('/tcn/api/v1/model');
+                    if (modelRes.ok) {
+                        const modelData = await modelRes.json();
+                        document.getElementById('tcn-model-status').textContent = modelData.loaded ? 'Geladen' : 'Nicht geladen';
+                    }
+                } catch (e) {
+                    document.getElementById('tcn-model-status').textContent = '-';
+                }
+            }
+        }
+
+        async function updateTcnTrainInfo() {
+            const data = await checkHealth('tcn-train', 3013, 'tcn-train-status');
+            if (data) {
+                document.getElementById('tcn-train-active').textContent = data.training_active ? 'Aktiv' : 'Inaktiv';
+
+                // Get detailed training status
+                try {
+                    const statusRes = await fetch('/tcn-train/api/v1/train/status');
+                    if (statusRes.ok) {
+                        const statusData = await statusRes.json();
+                        if (statusData.status === 'training' && statusData.current_epoch) {
+                            document.getElementById('tcn-train-epoch').textContent =
+                                `${statusData.current_epoch}/${statusData.total_epochs}`;
+                        } else {
+                            document.getElementById('tcn-train-epoch').textContent = '-';
+                        }
+                    }
+                } catch (e) {
+                    document.getElementById('tcn-train-epoch').textContent = '-';
+                }
+            }
         }
 
         async function updateHmmInfo() {
@@ -1829,7 +1907,7 @@
 
         async function countEndpoints() {
             // Count API endpoints from OpenAPI specs of all services
-            const services = ['data', 'nhits', 'tcn', 'hmm', 'embedder', 'rag', 'llm', 'watchdog'];
+            const services = ['data', 'nhits', 'tcn', 'tcn-train', 'hmm', 'embedder', 'rag', 'llm', 'watchdog'];
             let count = 0;
 
             for (const service of services) {
@@ -1856,6 +1934,7 @@
                 updateDataInfo(),
                 updateRagInfo(),
                 updateTcnInfo(),
+                updateTcnTrainInfo(),
                 updateHmmInfo(),
                 updateEmbedderInfo(),
                 updateWatchdogInfo(),
@@ -1871,7 +1950,7 @@
                 document.getElementById('endpoints-count').textContent = `Endpoints: ${totalEndpoints}`;
             });
 
-            document.getElementById('services-count').textContent = `Services: ${healthyServices}/9`;
+            document.getElementById('services-count').textContent = `Services: ${healthyServices}/10`;
             document.getElementById('last-update').textContent = `Update: ${new Date().toLocaleTimeString('de-DE')}`;
         }
 
